<resources>
    <string name="app_name">Smart Uni Forum</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="cannot_be_empty">Cannot be empty!</string>
    <string name="verifying">Verifying…</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="enter_a_valid_email">Enter a valid email!</string>
    <string name="click_the_add_button">Click the camera button to select a picture</string>
    <string name="signing_up">Signing up…</string>
    <string name="permission_required_to_access_storage">Permission required to access storage</string>
    <string name="select_picture">Select picture</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="feeds">Feeds</string>
    <string name="notifications">Notifications</string>
    <string name="me">Me</string>
    <string name="posts">Posts</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="trending">Trending</string>
    <string name="newLabel">New</string>
    <string name="getting_feed">Getting feed…</string>
    <string name="search">Search</string>
</resources>
